crates/solidity-v2/testing/snapshots/diagnostics_output/type_system/cannot_call_via_contract_type_name/overloaded/generated/solc/0.8.0-failure.txt
# This file is generated automatically by infrastructure scripts. Please don't edit by hand.

Diagnostics: 2

[TypeError 3419] Error: Cannot call function via contract type name.
    ╭─[input.sol:12:9]
    │
 12 │         A.f();
    │         ──┬──  
    │           ╰──── Error occurred here.
────╯

[TypeError 3419] Error: Cannot call function via contract type name.
    ╭─[input.sol:13:9]
    │
 13 │         A.f(1);
    │         ───┬──  
    │            ╰──── Error occurred here.
────╯
